Remove version from resulting docker-compose file
it is now obsolete according to the docker compose documentation

--- a/docker-generator/templates/docker-compose.j2
+++ b/docker-generator/templates/docker-compose.j2
@@ -1,5 +1,6 @@
 ---
-version: "{{docker_compose_version}}"
+{# version: "{{docker_compose_version}}" #}
+{# version is now obsolete #}
 services:
 {% for service in services %}
     {{ service.name }}:
