--- a/docker-generator/templates/docker-compose.j2
+++ b/docker-generator/templates/docker-compose.j2
@@ -51,7 +51,11 @@ services:
         {% endfor %}
         {% endif -%}
 
-    {% if service.volumes is defined %}
+        {% if service.command is defined %}
+        command: {{ service.command }}
+        {% endif -%}
+
+        {% if service.volumes is defined %}
         volumes:
         {% for volume in service.volumes %}
             - {{ volume }}
